feat: login api with jwt and hashing logic

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-PORT = 
-NODE_ENV = 
+PORT = 3000
+NODE_ENV = development
 
-DATABASE_HOST = 
-DATABASE_PORT = 
-DATABASE_USERNAME = 
+JWT_SECRET = 
+ACCESS_TOKEN_TTL = 
+
+DATABASE_HOST = localhost
+DATABASE_PORT = 5432
+DATABASE_USERNAME = postgres
 DATABASE_PASSWORD = 
 DATABASE_NAME = 
