--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV = development
 
 JWT_SECRET = 
 ACCESS_TOKEN_TTL = 
+REFRESH_TOKEN_TTL = 
 
 DATABASE_HOST = localhost
 DATABASE_PORT = 5432
