--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-PORT = 3000
-NODE_ENV = development
+PORT = '3000'
+NODE_ENV = 'development'
 
 JWT_SECRET = 
 ACCESS_TOKEN_TTL = 
 REFRESH_TOKEN_TTL = 
 
-DATABASE_HOST = localhost
-DATABASE_PORT = 5432
-DATABASE_USERNAME = postgres
+DATABASE_HOST = 'localhost'
+DATABASE_PORT = '5432'
+DATABASE_USERNAME = 'postgres'
 DATABASE_PASSWORD = 
 DATABASE_NAME = 
+
+GOOGLE_CLIENT_ID = 
+GOOGLE_CLIENT_SECRET = 
+
+ALLOWED_ORIGINS = 'http://localhost:3000,http://localhost:5173'
