--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET = 
 
 ALLOWED_ORIGINS = 'http://localhost:3000,http://localhost:5173'
+
+AWS_PUBLIC_BUCKET_NAME = 
+AWS_REGION = 
+AWS_CLOUDFRONT_URL = 
+AWS_ACCESS_KEY_ID = 
+AWS_SECRET_ACCESS_KEY = 
